k8s/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apc-obsv-ns
  labels:
    name: apc-obsv-ns
    purpose: monitoring
spec: {}
status: {}
